--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -203,7 +203,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-28}
+\date{2020-07-29}
 
 \begin{document}
 \maketitle
@@ -264,85 +264,16 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   abind_1.4.5              acepack_1.4.1           
-##   arm_1.11.1               askpass_1.1             
-##   assertthat_0.2.1         backports_1.1.8         
-##   base64enc_0.1-3          BH_1.72.0.3             
-##   bitops_1.0-6             bookdown_0.19.1         
-##   boot_1.3.25              broom_0.7.0.9000        
-##   callr_3.4.3              cellranger_1.1.0        
-##   checkmate_2.0.0          cli_2.0.2               
-##   clipr_0.7.0              cluster_2.1.0           
-##   coda_0.19.3              colorspace_1.4-1        
-##   compiler_4.0.2           crayon_1.3.4            
-##   curl_4.3                 data.table_1.12.8       
-##   DBI_1.1.0                dbplyr_1.4.3            
-##   desc_1.2.0               digest_0.6.25           
-##   dplyr_1.0.0              ellipsis_0.3.1          
-##   emoGG_0.0.2              evaluate_0.14           
-##   fansi_0.4.1              farver_2.0.3            
-##   forcats_0.5.0            foreign_0.8-80          
-##   Formula_1.2-3            fs_1.4.1                
-##   generics_0.0.2           ggplot2_3.3.2           
-##   glue_1.4.1               graphics_4.0.2          
-##   grDevices_4.0.2          grid_4.0.2              
-##   gridExtra_2.3            gsl_2.1.6               
-##   gtable_0.3.0             haven_2.3.1             
-##   highr_0.8                Hmisc_4.4-0             
-##   hms_0.5.3                htmlTable_2.0.0         
-##   htmltools_0.4.0          htmlwidgets_1.5.1       
-##   httr_1.4.1               isoband_0.2.2           
-##   janitor_2.0.1            jpeg_0.1-8.1            
-##   jsonlite_1.6.1           knitr_1.28              
-##   labeling_0.3             lattice_0.20-41         
-##   latticeExtra_0.6-29      lavaan_0.6.6            
-##   learnSampling_0.2        lifecycle_0.2.0         
-##   lme4_1.1.23              lubridate_1.7.8         
-##   magrittr_1.5             markdown_1.1            
-##   MASS_7.3.51.6            Matrix_1.2-18           
-##   matrixcalc_1.0.3         MBESS_4.7.0             
-##   methods_4.0.2            mgcv_1.8.31             
-##   mi_1.0                   mime_0.9                
-##   minqa_1.2.4              mnormt_2.0.1            
-##   modelr_0.1.8             munsell_0.5.0           
-##   mvtnorm_1.1.1            nlme_3.1-148            
-##   nloptr_1.2.2.2           nnet_7.3-14             
-##   numDeriv_2016.8.1.1      OpenMx_2.17.4           
-##   openssl_1.4.1            packrat_0.5.0           
-##   parallel_4.0.2           pbapply_1.4.2           
-##   pbivnorm_0.6.0           pillar_1.4.6            
-##   pkgbuild_1.1.0           pkgconfig_2.0.3         
-##   pkgload_1.1.0            png_0.1-7               
-##   praise_1.0.0             predictionInterval_1.0.0
-##   prettyunits_1.1.1        processx_3.4.3          
-##   progress_1.2.2           proto_1.0.0             
-##   ps_1.3.3                 psych_1.9.12.31         
-##   purrr_0.3.4              R6_2.4.1                
-##   RColorBrewer_1.1-2       Rcpp_1.0.5              
-##   RcppEigen_0.3.3.7.0      RcppParallel_5.0.2      
-##   RCurl_1.98-1.2           readr_1.3.1             
-##   readxl_1.3.1             rematch_1.0.1           
-##   repr_1.1.0               reprex_0.3.0            
-##   rlang_0.4.7              rmarkdown_2.2           
-##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rstudioapi_0.11         
-##   rvest_0.3.5              scales_1.1.1            
-##   selectr_0.4.2            sem_3.1.11              
-##   semTools_0.5.3           skimr_2.1.1             
-##   snakecase_0.11.0         splines_4.0.2           
-##   StanHeaders_2.21.0.5     statmod_1.4.34          
-##   stats_4.0.2              stats4_4.0.2            
-##   stringi_1.4.6            stringr_1.4.0           
-##   survival_3.1-12          sys_3.3                 
-##   testthat_2.3.2           tibble_3.0.3            
-##   tidyr_1.1.0              tidyselect_1.1.0        
-##   tidyverse_1.3.0          tinytex_0.23            
-##   tmvnsim_1.0-2            tools_4.0.2             
-##   utf8_1.1.4               utils_4.0.2             
-##   vctrs_0.3.2              viridis_0.5.1           
-##   viridisLite_0.3.0        whisker_0.4             
-##   withr_2.2.0              xfun_0.14               
-##   xml2_1.3.2               yaml_2.2.1
+##   base64enc_0.1.3 bookdown_0.19.1 compiler_4.0.2 
+##   digest_0.6.25   evaluate_0.14   glue_1.4.1     
+##   graphics_4.0.2  grDevices_4.0.2 highr_0.8      
+##   htmltools_0.4.0 jsonlite_1.6.1  knitr_1.28     
+##   magrittr_1.5    markdown_1.1    methods_4.0.2  
+##   mime_0.9        packrat_0.5.0   Rcpp_1.0.5     
+##   rlang_0.4.7     rmarkdown_2.2   rstudioapi_0.11
+##   stats_4.0.2     stringi_1.4.6   stringr_1.4.0  
+##   tinytex_0.23    tools_4.0.2     utils_4.0.2    
+##   xfun_0.14       yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -586,6 +517,23 @@ The tidyverse is now installed, so we need to activate it. We do that with the l
 \subsection{Activate tidyverse auto-complete for your script}\label{activate-tidyverse-auto-complete-for-your-script}}
 
 Select the library(tidyverse) text with your mouse/track-pad so that it is highlighted. Then click the Run button in the upper right of the Script panel. Doing this ``runs'' the selected text. After you click the Run button you should see text like the following the Console panel:
+
+\begin{verbatim}
+## -- Attaching packages ------------------- tidyverse 1.3.0 --
+\end{verbatim}
+
+\begin{verbatim}
+## v ggplot2 3.3.2     v purrr   0.3.4
+## v tibble  3.0.3     v dplyr   1.0.0
+## v tidyr   1.1.0     v stringr 1.4.0
+## v readr   1.3.1     v forcats 0.5.0
+\end{verbatim}
+
+\begin{verbatim}
+## -- Conflicts ---------------------- tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()
+\end{verbatim}
 
 When you use library(tidyverse) to activate the tidyverse you activate the most commonly used subset of the tidyverse packages. In the output you see checkmarks beside names of the tidyverse packages you have activated.
 
@@ -6580,15 +6528,15 @@ If you scroll down to section 5 Uncategorized on this page you will find the cod
 \hypertarget{accessible-colors}{%
 \section{Accessible Colors}\label{accessible-colors}}
 
-The current version of the graph is much improved from where we started at the begining of the chapter. In many respects using the ``proper'' colors for the Marvel and DC studios is aesthetically pleasing. That said, a major consideration for all the graphs you make should be making them accessible and interpretable by a wide audience.
+The current version of the graph is much improved from where we started at the begining of the chapter. One notable improvement was the use of the ``proper'' colors for the Marvel and DC studios. Although using these colors was aethetically pleasing a major consideration for all the graphs you make should ensuring they are accessible to a wide audience.
 
-Color blindness is an issue that affects approximately five percent of the population. A nuanced discussion of the different types of color blindness is beyond the scope of the current discussion. We can, however, take a momement to think about every graph as being composed of two parts that work together to create the overall image. We can can there of there being a lightness (i.e., light vs.~dark) component and a color component. Together these two components work together to create the image that we see. This distinction between lightness and color is relevant to all images \citep[see][]{margulis2005photoshop}.
+Color blindness is an issue that affects approximately five percent of the population. A nuanced discussion of the different types of color blindness is beyond the scope of this chapter. We can, however, take a momement to think about every graph as being composed of two parts that work together to create the colors overall image. We can can there of there being a lightness (i.e., light vs.~dark) component and a hue component (e.g., magenta, yellow, etc.). Together these two components work together to create colors that we see. This distinction between lightness and hue is relevant to all images not just graphs \citep[see][]{margulis2005photoshop}.
 
 \begin{figure}
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/nocolorcomparison} \caption{Color information removed from current graph}\label{fig:colorcomparison}
+\includegraphics[width=0.85\linewidth]{ch_graphing/images/nocolorcomparison} \caption{Color information (i.e., hue) removed from current graph}\label{fig:colorcomparison}
 \end{figure}
 
-Figure \ref{fig:colorcomparison}A presents our current graph whereas Figure \ref{fig:colorcomparison}B presents the same graph with the color component removed. You can see that when the color component is removed that the distinction between the Marvel and DC bars is also removed. The particular colors used to represent Marvel/DC differ in terms of color but not lightness. Consequently, when we remove the color component we are left with a graph, \ref{fig:colorcomparison}B, that does not differentiate between the two studios. In order for a color graph to be accessible to people with color blindness we need to pick colors that vary in terms of lightness. We can do that with the help of the RColorBrewer package.
+Figure \ref{fig:colorcomparison}A presents our current graph whereas Figure \ref{fig:colorcomparison}B presents the same graph with the hue component removed. You can see that when the hue component is removed that the distinction between the Marvel and DC bars is also removed. The particular colors used to represent Marvel/DC differ in terms of hue but not lightness. Consequently, when we remove the hue component we are left with a graph, \ref{fig:colorcomparison}B, that does not differentiate between the two studios. In order for a color graph to be accessible to people with color blindness we need to pick colors that vary in terms of lightness as well as hue. We can do that with the help of the RColorBrewer package.
 
 \hypertarget{rcolorbrewer}{%
 \subsection{RColorBrewer}\label{rcolorbrewer}}
@@ -6596,7 +6544,7 @@ Figure \ref{fig:colorcomparison}A presents our current graph whereas Figure \ref
 \hypertarget{picking-a-palette}{%
 \subsubsection{Picking a palette}\label{picking-a-palette}}
 
-The RColorBrewer package can be used to generate color palettes for graphs that are accessible to people with color blindness. You can see the color-blind friendly palettes, along with their respective names, by using the command below. This presents a wide range of color blind safe palettes with a large number of colors - as illustrated in Figure \ref{fig:colorpal}.
+The RColorBrewer package can be used to generate color palettes for graphs that are accessible to people with color blindness. That is, it creates sets of colors, called palettes, for which the colors vary in terms of both lightness and hue. You can see the color-blind accessible palettes, along with their respective names, by using the command below. This code produces a wide range of color-blind accessible palettes with a large number of colors in each palette - as illustrated in Figure \ref{fig:colorpal}.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6606,15 +6554,24 @@ The RColorBrewer package can be used to generate color palettes for graphs that 
 \end{Shaded}
 
 \begin{figure}
-\includegraphics[width=0.7\linewidth,height=0.7\textheight]{ch_graphing/images/colors_all} \caption{Wide range color palette (color-blind safe)}\label{fig:colorpal}
+\includegraphics[width=0.7\linewidth,height=0.7\textheight]{ch_graphing/images/colors_all} \caption{Wide range color palette (color-blind accessible)}\label{fig:colorpal}
 \end{figure}
 
 \newpage
 
-In Figure \ref{fig:colorpal}, above, we showed palettes with a large number of colors. But if you have a smaller number of possible colors in your graph - you want a smaller palette (to ensure maximium contrast between colors). For example, if you only want see palettes with three colors you use the code below which generate Figure \ref{fig:colorspalthree}.
+In Figure \ref{fig:colorpal}, above, we showed palettes with a large number of colors. But if you have a smaller number of possible colors in your graph - you want a palette with fewer colors (to ensure maximium contrast between those colors). You can, for example, obtain palettes with only three colors using the code below.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(RColorBrewer)}
+\KeywordTok{display.brewer.all}\NormalTok{(}\DataTypeTok{n =} \DecValTok{3}\NormalTok{, }\DataTypeTok{colorblindFriendly =} \OtherTok{TRUE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+The above code generates the three-color palettes presented in Figure \ref{fig:colorspalthree}.
 
 \begin{figure}
-\includegraphics[width=0.7\linewidth,height=0.7\textheight]{ch_graphing/images/colors_3} \caption{Narrow range color palette (color-blind safe)}\label{fig:colorspalthree}
+\includegraphics[width=0.7\linewidth,height=0.7\textheight]{ch_graphing/images/colors_3} \caption{Narrow range color palette (color-blind accessible)}\label{fig:colorspalthree}
 \end{figure}
 
 \newpage
@@ -6622,7 +6579,7 @@ In Figure \ref{fig:colorpal}, above, we showed palettes with a large number of c
 \hypertarget{using-a-palette}{%
 \subsubsection{Using a palette}\label{using-a-palette}}
 
-We can use the color palette by specifying it's name within scale\_fill\_brewer(). We want to use the Paired palette in Figure \ref{fig:colorspalthree} so we use the code: scale\_fill\_brewer(palette = ``Paired''), as illustrated below:
+We can use a color palette by specifying its name within scale\_fill\_brewer(). We want to use the ``Paired'' palette in Figure \ref{fig:colorspalthree} so we use the code: scale\_fill\_brewer(palette = ``Paired''), as illustrated below:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6655,7 +6612,7 @@ We can use the color palette by specifying it's name within scale\_fill\_brewer(
 \hypertarget{palette-subsets}{%
 \subsubsection{Palette subsets}\label{palette-subsets}}
 
-Imagine
+Our graph had only two colors but the ``Paired'' palette had three colors. When ggplot made the graph it automatically used the first two colors of the three color palette. What if you wanted the second two colors in the palette? We can do that but we have to revert to a manual color process like use used before via the scale\_fill\_manual(). But we want to do so using the colors from the ``Paired'' palette. We can obtain the color codes for the ``Paired'' palette with the code below:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6667,7 +6624,13 @@ Imagine
 ## [1] "#A6CEE3" "#1F78B4" "#B2DF8A"
 \end{verbatim}
 
-And then the graph:
+The numbers in the output correspond to values representing the three colors of the ``Paired'' palette, see Figure \ref{fig:pairedpal}. If we want the last two colors in the palette for our graph that means we want the colors: \#1F78B4 and \#B2DF8A.
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{ch_graphing/images/pairedpalette} \caption{Paired palette colors with hex numbers}\label{fig:pairedpal}
+\end{figure}
+
+We can put the two colors we want (\#1F78B4 and \#B2DF8A) on the graph by using the scale\_fill\_manual() command - instead of the scale\_fill\_brewer() command. We can see this in the code below:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6697,14 +6660,18 @@ And then the graph:
 
 \includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph5}
 
-We once again compare:
+Now that we have used a color-blind accessible palette in the graph we can look at the graph without the color component. In Figure \ref{fig:colorcomparison2}B, below, notice that the bars representing the two studio are easily distinguishable based on lightness alone. That is, the lightness graph in Figure \ref{fig:colorcomparison2}B demonstrates the new color-blind accessible colors vary in term of both hue and lightness - not just hue. Therefore, when the hue is removed the two colors are distinguishable. This makes the graph accessible to color-blind individuals.
 
 \begin{figure}
-\includegraphics[width=0.85\linewidth]{ch_graphing/images/nocolorcomparison2} \caption{Color information removed from new color-safe graph}\label{fig:colorcomparison2}
+\includegraphics[width=0.85\linewidth]{ch_graphing/images/nocolorcomparison2} \caption{Color information (i.e., hue) removed from new color-blind accessible graph}\label{fig:colorcomparison2}
 \end{figure}
+
+\newpage
 
 \hypertarget{avoid-color}{%
 \subsection{Avoid color}\label{avoid-color}}
+
+When you only have two colors on a graph another option for creating an accessible graph is to remove the colors entirely and make a black and white graph. In the code below we use scale\_fill\_manual() with the values ``\#ffffff'' (white) and "``\#000000'' (black). The intent was to create bars that are white for Marvel and black for DC. Unfortunately, because the graph has a white back ground you can see this resulted in the Marvel bars disappearing.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6733,6 +6700,12 @@ We once again compare:
 \end{Shaded}
 
 \includegraphics[width=0.85\linewidth]{ch_graphing/images/emoji_graph2}
+
+\newpage
+
+How do get around the Marvel bars disappearing when we use white?
+
+\textbf{Color vs.~fill.} The ggplot packages makes a distinction between \textbf{fill} and \textbf{color}. The term fill is used to refer to the inside color of bars. In contrast, \textbf{color} is used to the refer to the lines that outline the shape of each bar. In the prevous code we did not specify color. In the code below, we modify the geom\_col() command to geom\_col(color = ``black''). This change adds a black outline around all the bars -- including the ones with a white fill. You can see the result is a much improved graph. This black/white graph is accessible to everyone.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6784,10 +6757,9 @@ If you are able to use PDFs in your workflow that's often the best option for sa
 \hypertarget{pc-or-mac}{%
 \subsection{PC or MAC}\label{pc-or-mac}}
 
-If you have a PC it's hard to put a PDF into MSWord. Therefore save the graph as a jpg file. You do so with the code below. This creates a picture type file at a resolution (dpi = dots per inch) that is sufficiently high for quality printing.
+If you have a PC it's hard to put a PDF into MSWord. Therefore save the graph as a .jpg file. You do so with the code below. This creates a picture type file at a resolution (dpi = dots per inch) that is sufficiently high for quality printing.
 
-With a PC you need to use the INSERT menu and insert the graph as a picture in MSWord.
-With a MAC you can just drag and drop the PDF file into your MSWord document.
+With a PC you need to use the INSERT menu and insert the graph as a picture in MSWord. With a MAC you can just drag and drop the .jpg file into your MSWord document.
 
 \begin{Shaded}
 \begin{Highlighting}[]
