--- a/06-graphing.Rmd
+++ b/06-graphing.Rmd
@@ -734,9 +734,9 @@ knitr::include_graphics("ch_graphing/images/emoji_graph.png")
 
 ## Accessible Colors
 
-The current version of the graph is much improved from where we started at the begining of the chapter. In many respects using the "proper" colors for the Marvel and DC studios is aesthetically pleasing. That said, a major consideration for all the graphs you make should be making them accessible and interpretable by a wide audience.
+The current version of the graph is much improved from where we started at the begining of the chapter. One notable improvement was the use of the "proper" colors for the Marvel and DC studios. Although using these colors was aethetically pleasing a major consideration for all the graphs you make should ensuring they are accessible to a wide audience.
 
-Color blindness is an issue that affects approximately five percent of the population. A nuanced discussion of the different types of color blindness is beyond the scope of the current discussion. We can, however, take a momement to think about every graph as being composed of two parts that work together to create the overall image. We can can there of there being a lightness (i.e., light vs. dark) component and a hu component. Together these two components work together to create the image that we see. This distinction between lightness and hue is relevant to all images [see @margulis2005photoshop].  
+Color blindness is an issue that affects approximately five percent of the population. A nuanced discussion of the different types of color blindness is beyond the scope of this chapter. We can, however, take a momement to think about every graph as being composed of two parts that work together to create the colors overall image. We can can there of there being a lightness (i.e., light vs. dark) component and a hue component (e.g., magenta, yellow, etc.). Together these two components work together to create colors that we see. This distinction between lightness and hue is relevant to all images not just graphs [see @margulis2005photoshop].  
 
 ```{r colorcomparison, out.width= "85%", echo = FALSE, fig.cap = "Color information (i.e., hue) removed from current graph"}
 knitr::include_graphics("ch_graphing/images/nocolorcomparison.png")
@@ -748,7 +748,7 @@ Figure \@ref(fig:colorcomparison)A presents our current graph whereas Figure \@r
 
 #### Picking a palette
 
-The RColorBrewer package can be used to generate color palettes for graphs that are accessible to people with color blindness. You can see the color-blind friendly palettes, along with their respective names, by using the command below. This presents a wide range of color blind accessible palettes with a large number of colors - as illustrated in Figure \@ref(fig:colorpal).
+The RColorBrewer package can be used to generate color palettes for graphs that are accessible to people with color blindness. That is, it creates sets of colors, called palettes, for which the colors vary in terms of both lightness and hue. You can see the color-blind accessible palettes, along with their respective names, by using the command below. This code produces a wide range of color-blind accessible palettes with a large number of colors in each palette - as illustrated in Figure \@ref(fig:colorpal).
 
 ```{r, include = FALSE}
 library(RColorBrewer)
@@ -785,7 +785,15 @@ knitr::include_graphics("ch_graphing/images/colors_all.png")
 
 \newpage
 
-In Figure \@ref(fig:colorpal), above, we showed palettes with a large number of colors. But if you have a smaller number of possible colors in your graph - you want a smaller palette (to ensure maximium contrast between colors). For example, if you only want to see palettes with three colors you use the code below which generate Figure \@ref(fig:colorspalthree).
+In Figure \@ref(fig:colorpal), above, we showed palettes with a large number of colors. But if you have a smaller number of possible colors in your graph - you want a palette with fewer colors (to ensure maximium contrast between those colors). You can, for example, obtain palettes with only three colors using the code below. 
+
+
+```{r, eval = FALSE}
+library(RColorBrewer)
+display.brewer.all(n = 3, colorblindFriendly = TRUE)
+```
+
+The above code generates the three-color palettes presented in Figure \@ref(fig:colorspalthree).
 
 ```{r colorspalthree, out.height= "70%", out.width= "70%", echo = FALSE,fig.cap = "Narrow range color palette (color-blind accessible)"}
 knitr::include_graphics("ch_graphing/images/colors_3.png")
@@ -795,7 +803,7 @@ knitr::include_graphics("ch_graphing/images/colors_3.png")
 
 #### Using a palette
 
-We can use the color palette by specifying it's name within scale_fill_brewer(). We want to use the Paired palette in Figure \@ref(fig:colorspalthree) so we use the code: scale_fill_brewer(palette = "Paired"), as illustrated below:
+We can use a color palette by specifying its name within scale_fill_brewer(). We want to use the "Paired" palette in Figure \@ref(fig:colorspalthree) so we use the code: scale_fill_brewer(palette = "Paired"), as illustrated below:
 
 ```{r, fig.width = 5, fig.height= 4}
 my_graph <- ggplot(data = movie_data,
@@ -831,20 +839,20 @@ knitr::include_graphics("ch_graphing/images/emoji_graph4.png")
 
 #### Palette subsets
 
-The palette above use the first two colors of a three color palette. What if you wanted the second two colors in the palette? If so, we obtain the colors for each level of the color palette with the command below:
+Our graph had only two colors but the "Paired" palette had three colors. When ggplot made the graph it automatically used the first two colors of the three color palette. What if you wanted the second two colors in the palette? We can do that but we have to revert to a manual color process like use used before via the scale_fill_manual(). But we want to do so using the colors from the "Paired" palette. We can obtain the color codes for the "Paired" palette with the code below:
 
 ```{r}
 brewer.pal(n = 3, name = "Paired")
 ```
 
-These numbers correspond to values representing the three colors of the Paired palette. If we want the last two colors in the palette for our graph that means we want the colors: #1F78B4 and #B2DF8A.
+The  numbers in the output correspond to values representing the three colors of the "Paired" palette, see Figure \@ref(fig:pairedpal). If we want the last two colors in the palette for our graph that means we want the colors: #1F78B4 and #B2DF8A.
 
 
-```{r, out.width= "75%", echo = FALSE}
+```{r pairedpal, out.width= "75%", echo = FALSE, fig.cap="Paired palette colors with hex numbers"}
 knitr::include_graphics("ch_graphing/images/pairedpalette.png")
 ```
 
-We can put the two colors we want (#1F78B4 and #B2DF8A) on the graph by once again using the scale_fill_manual() command - instead of the scale_fill_brewer() command. We can see this in the code below:
+We can put the two colors we want (#1F78B4 and #B2DF8A) on the graph by using the scale_fill_manual() command - instead of the scale_fill_brewer() command. We can see this in the code below:
 
 ```{r, fig.width = 5, fig.height= 4}
 my_graph <- ggplot(data = movie_data,
@@ -878,17 +886,17 @@ ggsave(plot = my_graph, filename = "ch_graphing/images/emoji_graph5.png", width 
 knitr::include_graphics("ch_graphing/images/emoji_graph5.png")
 ```
 
-
-Now that we have used a color-blind accessible palette we can look at the graph without the color component. We see in Figure \@ref(fig:colorcomparison2)B, below, that when we examine bars based on lightness alone (with hue removed) we have contrast. The new color-blind accessible colors vary in term of hue and lightness - not just hue. Therefore, when the hue is removed the two colors are distinguishable color-blind individuals.
+Now that we have used a color-blind accessible palette in the graph we can look at the graph without the color component. In Figure \@ref(fig:colorcomparison2)B, below, notice that the bars representing the two studio are easily distinguishable based on lightness alone. That is, the lightness graph in Figure \@ref(fig:colorcomparison2)B demonstrates the new color-blind accessible colors vary in term of both hue and lightness - not just hue. Therefore, when the hue is removed the two colors are distinguishable. This makes the graph accessible to color-blind individuals.
 
 ```{r colorcomparison2, out.width= "85%", echo = FALSE, fig.cap = "Color information (i.e., hue) removed from new color-blind accessible graph"}
 knitr::include_graphics("ch_graphing/images/nocolorcomparison2.png")
 ```
 
+\newpage
+
 ### Avoid color
 
-
-
+When you only have two colors on a graph another option for creating an accessible graph is to remove the colors entirely and make a black and white graph. In the code below we use scale_fill_manual() with the values "#ffffff" (white) and ""#000000" (black). The intent was to create bars that are white for Marvel and black for DC. Unfortunately, because the graph has a white back ground you can see this resulted in the Marvel bars disappearing.
 
 ```{r, fig.width = 5, fig.height= 4}
 my_graph <- ggplot(data = movie_data,
@@ -925,7 +933,11 @@ ggsave(plot = my_graph, filename = "ch_graphing/images/emoji_graph2.png", width 
 knitr::include_graphics("ch_graphing/images/emoji_graph2.png")
 ```
 
+\newpage
 
+How do get around the Marvel bars disappearing when we use white?
+
+**Color vs. fill.** The ggplot packages makes a distinction between **fill** and **color**. The term fill is used to refer to the inside color of bars. In contrast, **color** is used to the refer to the lines that outline the shape of each bar.  In the prevous code we did not specify color. In the code below, we modify the geom_col() command to geom_col(color = "black"). This change adds a black outline around all the bars -- including the ones with a white fill. You can see the result is a much improved graph. This black/white graph is accessible to everyone.
 
 ```{r, fig.width = 5, fig.height= 4}
 my_graph <- ggplot(data = movie_data,
@@ -961,13 +973,6 @@ ggsave(plot = my_graph, filename = "ch_graphing/images/emoji_graph3.png", width 
 ```{r, out.width= "85%", echo = FALSE}
 knitr::include_graphics("ch_graphing/images/emoji_graph3.png")
 ```
-
-
-
-
-
-
-
 
 ## Saving
 
